--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,164 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
 </head>
 <body>
     test
+    <section class="now">
+      <div class="container">
+        <div class="marquee-wrapper">
+          <div class="marquee">
+            <div class="marquee-group">
+              <div class="marquee-tag-container">
+                <img
+                  src="images/now/seabeast.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+                <div class="marquee-tag-container">
+                <img
+                  src="images/now/madagascar.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/now/kungfupanda.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                src="images/now/httyd2.jpg"
+                alt="recommended movie the sea beast"
+                class="marquee-tag-icon"
+                width="250"
+                height="400"
+              />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/now/seabeast.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+                <div class="marquee-tag-container">
+                <img
+                  src="images/now/madagascar.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/now/kungfupanda.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                src="images/now/httyd2.jpg"
+                alt="recommended movie the sea beast"
+                class="marquee-tag-icon"
+                width="250"
+                height="400"
+              />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/now/seabeast.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+                <div class="marquee-tag-container">
+                <img
+                  src="images/now/madagascar.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/now/kungfupanda.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                src="images/now/httyd2.jpg"
+                alt="recommended movie the sea beast"
+                class="marquee-tag-icon"
+                width="250"
+                height="400"
+              />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/now/seabeast.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+                <div class="marquee-tag-container">
+                <img
+                  src="images/now/madagascar.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/now/kungfupanda.jpg"
+                  alt="recommended movie the sea beast"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                src="images/now/httyd2.jpg"
+                alt="recommended movie the sea beast"
+                class="marquee-tag-icon"
+                width="250"
+                height="400"
+              />
+              </div>
+            </div>
+          </div>
+        </div>      
+      </div>
+    </section>
 </body>
 </html>
