--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,17 @@
 </head>
 <body>
     test
+    <button onclick="showNow()">Now</button>
+    <button onclick="showSoon()">Soon</button>
     <section class="now">
       <div class="container">
         <div class="marquee-wrapper">
           <div class="marquee">
-            <div class="marquee-group">
+            <div class="marquee-group" id="slidingcontent">
               <div class="marquee-tag-container">
                 <img
-                  src="images/now/seabeast.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/mariobros.jpg"
+                  alt="soon mario bros"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -26,8 +28,8 @@
               </div>
                 <div class="marquee-tag-container">
                 <img
-                  src="images/now/madagascar.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/beautifuldisaster.jpg"
+                  alt="soon Beautiful disaster"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -35,8 +37,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/now/kungfupanda.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/blacklotus.jpg"
+                  alt="soon black lotus"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -44,8 +46,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                src="images/now/httyd2.jpg"
-                alt="recommended movie the sea beast"
+                src="images/soon/zomerfrankrijk.jpg"
+                alt="soon zomer in frankrijk"
                 class="marquee-tag-icon"
                 width="250"
                 height="400"
@@ -53,8 +55,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/now/seabeast.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/guardiansvol3.jpg"
+                  alt="soon guardians of the galaxy vol. 3"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -62,8 +64,8 @@
               </div>
                 <div class="marquee-tag-container">
                 <img
-                  src="images/now/madagascar.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/fastx.jpg"
+                  alt="soon fast x"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -71,26 +73,19 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/now/kungfupanda.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/littlemermaid.png"
+                  alt="soon the little mermaid"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
                 />
               </div>
+            </div>
+            <div class="marquee-group" id="slidingcontent2" aria-hidden="true">
               <div class="marquee-tag-container">
                 <img
-                src="images/now/httyd2.jpg"
-                alt="recommended movie the sea beast"
-                class="marquee-tag-icon"
-                width="250"
-                height="400"
-              />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/now/seabeast.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/mariobros.jpg"
+                  alt="soon mario bros"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -98,8 +93,8 @@
               </div>
                 <div class="marquee-tag-container">
                 <img
-                  src="images/now/madagascar.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/playing/beautifuldisaster.jpg"
+                  alt="soon Beautiful disaster"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -107,8 +102,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/now/kungfupanda.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/blacklotus.jpg"
+                  alt="soon black lotus"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -116,8 +111,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                src="images/now/httyd2.jpg"
-                alt="recommended movie the sea beast"
+                src="images/soon/zomerfrankrijk.jpg"
+                alt="soon zomer in frankrijk"
                 class="marquee-tag-icon"
                 width="250"
                 height="400"
@@ -125,8 +120,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/now/seabeast.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/guardiansvol3.jpg"
+                  alt="soon guardians of the galaxy vol. 3"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -134,8 +129,8 @@
               </div>
                 <div class="marquee-tag-container">
                 <img
-                  src="images/now/madagascar.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/fastx.jpg"
+                  alt="soon fast x"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -143,21 +138,12 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/now/kungfupanda.jpg"
-                  alt="recommended movie the sea beast"
+                  src="images/soon/littlemermaid.png"
+                  alt="soon the little mermaid"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
                 />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                src="images/now/httyd2.jpg"
-                alt="recommended movie the sea beast"
-                class="marquee-tag-icon"
-                width="250"
-                height="400"
-              />
               </div>
             </div>
           </div>
@@ -165,4 +151,5 @@
       </div>
     </section>
 </body>
+<script src="/public/script/index.js"></script>
 </html>
