Co-authored-by: Vermeulen, K.P.T. (Koen) <k.p.t.vermeulen@students.uu.nl>

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    test
+    <form name="data" action="http:/localhost:8081/main.js">
+        <p>
+            actor: 
+            <input type="text" name="actorId" placeholder="178 - 277" required>
+        </p>
+        <p>
+            <input type="submit"value="Submit"/>
+        </p>
 </body>
 </html>
