--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form name="data" action="http:/localhost:8081/main.js">
+    <form name="data" action="http:/localhost:8005/get-actors">
         <p>
             actor: 
             <input type="text" name="actorId" placeholder="178 - 277" required>
