--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
             <div class="marquee-group" id="slidingcontent">
               <div class="marquee-tag-container">
                 <img
-                  src="images/soon/mariobros.jpg"
-                  alt="soon mario bros"
+                  src="images/playing/dungeons.jpg"
+                  alt="now dungeons"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -28,8 +28,8 @@
               </div>
                 <div class="marquee-tag-container">
                 <img
-                  src="images/soon/beautifuldisaster.jpg"
-                  alt="soon Beautiful disaster"
+                  src="images/playing/johnwick4.jpg"
+                  alt="now john wick"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -37,8 +37,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/soon/blacklotus.jpg"
-                  alt="soon black lotus"
+                  src="images/playing/maybeido.jpg"
+                  alt="now maybeido"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -46,8 +46,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                src="images/soon/zomerfrankrijk.jpg"
-                alt="soon zomer in frankrijk"
+                src="images/playing/firstblood.jpg"
+                alt="now firstblood"
                 class="marquee-tag-icon"
                 width="250"
                 height="400"
@@ -55,8 +55,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/soon/guardiansvol3.jpg"
-                  alt="soon guardians of the galaxy vol. 3"
+                  src="images/playing/65.jpg"
+                  alt="now 65"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -64,8 +64,8 @@
               </div>
                 <div class="marquee-tag-container">
                 <img
-                  src="images/soon/fastx.jpg"
-                  alt="soon fast x"
+                  src="images/playing/creed3.jpg"
+                  alt="now creed 3"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -73,8 +73,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/soon/littlemermaid.png"
-                  alt="soon the little mermaid"
+                  src="images/playing/scream6.jpg"
+                  alt="now scream6"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -82,70 +82,70 @@
               </div>
             </div>
             <div class="marquee-group" id="slidingcontent2" aria-hidden="true">
-              <div class="marquee-tag-container">
-                <img
-                  src="images/soon/mariobros.jpg"
-                  alt="soon mario bros"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
                 <div class="marquee-tag-container">
-                <img
-                  src="images/playing/beautifuldisaster.jpg"
-                  alt="soon Beautiful disaster"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/soon/blacklotus.jpg"
-                  alt="soon black lotus"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                src="images/soon/zomerfrankrijk.jpg"
-                alt="soon zomer in frankrijk"
-                class="marquee-tag-icon"
-                width="250"
-                height="400"
-              />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/soon/guardiansvol3.jpg"
-                  alt="soon guardians of the galaxy vol. 3"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
+                  <img
+                    src="images/playing/dungeons.jpg"
+                    alt="now dungeons"
+                    class="marquee-tag-icon"
+                    width="250"
+                    height="400"
+                  />
+                </div>
+                  <div class="marquee-tag-container">
+                  <img
+                    src="images/playing/johnwick4.jpg"
+                    alt="now john wick"
+                    class="marquee-tag-icon"
+                    width="250"
+                    height="400"
+                  />
+                </div>
                 <div class="marquee-tag-container">
-                <img
-                  src="images/soon/fastx.jpg"
-                  alt="soon fast x"
+                  <img
+                    src="images/playing/maybeido.jpg"
+                    alt="now maybeido"
+                    class="marquee-tag-icon"
+                    width="250"
+                    height="400"
+                  />
+                </div>
+                <div class="marquee-tag-container">
+                  <img
+                  src="images/playing/firstblood.jpg"
+                  alt="now firstblood"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
                 />
+                </div>
+                <div class="marquee-tag-container">
+                  <img
+                    src="images/playing/65.jpg"
+                    alt="now 65"
+                    class="marquee-tag-icon"
+                    width="250"
+                    height="400"
+                  />
+                </div>
+                  <div class="marquee-tag-container">
+                  <img
+                    src="images/playing/creed3.jpg"
+                    alt="now creed 3"
+                    class="marquee-tag-icon"
+                    width="250"
+                    height="400"
+                  />
+                </div>
+                <div class="marquee-tag-container">
+                  <img
+                    src="images/playing/scream6.jpg"
+                    alt="now scream6"
+                    class="marquee-tag-icon"
+                    width="250"
+                    height="400"
+                  />
+                </div>
               </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/soon/littlemermaid.png"
-                  alt="soon the little mermaid"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-            </div>
           </div>
         </div>      
       </div>
