get movies from the database

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
 </head>
-<body>
+<body onload="getMovies()"">
     test
     <button onclick="showNow()">Now</button>
     <button onclick="showSoon()">Soon</button>
@@ -19,8 +19,8 @@
             <div class="marquee-group" id="slidingcontent">
               <div class="marquee-tag-container">
                 <img
-                  src="images/playing/dungeons.jpg"
-                  alt="now dungeons"
+                  src="images/playing/Alien.jpg"
+                  alt="now Alien"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -28,8 +28,8 @@
               </div>
                 <div class="marquee-tag-container">
                 <img
-                  src="images/playing/johnwick4.jpg"
-                  alt="now john wick"
+                  src="images/playing/Back-to-the-Future.jpg"
+                  alt="now Back to the Future"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -37,8 +37,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/playing/maybeido.jpg"
-                  alt="now maybeido"
+                  src="images/playing/Die-Hard.jpg"
+                  alt="now Die Hard"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -46,8 +46,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                src="images/playing/firstblood.jpg"
-                alt="now firstblood"
+                src="images/playing/ET-The-Extra-Terrestrial.jpg"
+                alt="now E.T. The Extra-Terrestrial"
                 class="marquee-tag-icon"
                 width="250"
                 height="400"
@@ -55,8 +55,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/playing/65.jpg"
-                  alt="now 65"
+                  src="images/playing/Forrest-Gump.jpg"
+                  alt="now Forrest Gump"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -64,8 +64,8 @@
               </div>
                 <div class="marquee-tag-container">
                 <img
-                  src="images/playing/creed3.jpg"
-                  alt="now creed 3"
+                  src="images/playing/Inception.jpg"
+                  alt="now Inception"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -73,8 +73,8 @@
               </div>
               <div class="marquee-tag-container">
                 <img
-                  src="images/playing/scream6.jpg"
-                  alt="now scream6"
+                  src="images/playing/Jaws.jpg"
+                  alt="now Jaws"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
@@ -82,74 +82,74 @@
               </div>
             </div>
             <div class="marquee-group" id="slidingcontent2" aria-hidden="true">
-                <div class="marquee-tag-container">
-                  <img
-                    src="images/playing/dungeons.jpg"
-                    alt="now dungeons"
-                    class="marquee-tag-icon"
-                    width="250"
-                    height="400"
-                  />
-                </div>
-                  <div class="marquee-tag-container">
-                  <img
-                    src="images/playing/johnwick4.jpg"
-                    alt="now john wick"
-                    class="marquee-tag-icon"
-                    width="250"
-                    height="400"
-                  />
-                </div>
-                <div class="marquee-tag-container">
-                  <img
-                    src="images/playing/maybeido.jpg"
-                    alt="now maybeido"
-                    class="marquee-tag-icon"
-                    width="250"
-                    height="400"
-                  />
-                </div>
-                <div class="marquee-tag-container">
-                  <img
-                  src="images/playing/firstblood.jpg"
-                  alt="now firstblood"
+              <div class="marquee-tag-container">
+                <img
+                  src="images/playing/Alien.jpg"
+                  alt="now Alien"
                   class="marquee-tag-icon"
                   width="250"
                   height="400"
                 />
-                </div>
-                <div class="marquee-tag-container">
-                  <img
-                    src="images/playing/65.jpg"
-                    alt="now 65"
-                    class="marquee-tag-icon"
-                    width="250"
-                    height="400"
-                  />
-                </div>
-                  <div class="marquee-tag-container">
-                  <img
-                    src="images/playing/creed3.jpg"
-                    alt="now creed 3"
-                    class="marquee-tag-icon"
-                    width="250"
-                    height="400"
-                  />
-                </div>
-                <div class="marquee-tag-container">
-                  <img
-                    src="images/playing/scream6.jpg"
-                    alt="now scream6"
-                    class="marquee-tag-icon"
-                    width="250"
-                    height="400"
-                  />
-                </div>
               </div>
+                <div class="marquee-tag-container">
+                <img
+                  src="images/playing/Back-to-the-Future.jpg"
+                  alt="now Back to the Future"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/playing/Die-Hard.jpg"
+                  alt="now Die Hard"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                src="images/playing/ET-The-Extra-Terrestrial.jpg"
+                alt="now E.T. The Extra-Terrestrial"
+                class="marquee-tag-icon"
+                width="250"
+                height="400"
+              />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/playing/Forrest-Gump.jpg"
+                  alt="now Forrest Gump"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/playing/Inception.jpg"
+                  alt="now Inception"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+              <div class="marquee-tag-container">
+                <img
+                  src="images/playing/Jaws.jpg"
+                  alt="now Jaws"
+                  class="marquee-tag-icon"
+                  width="250"
+                  height="400"
+                />
+              </div>
+            </div>
           </div>
         </div>      
       </div>
     </section>
 </body>
-<script src="/public/script/index.js"></script>
+<script src="/script/index.js"></script>
 </html>
