Add movie pages with information

--- a/public/index.html
+++ b/public/index.html
@@ -8,143 +8,16 @@
     <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
 </head>
-<body onload="getMovies()"">
-    test
-    <button onclick="showNow()">Now</button>
-    <button onclick="showSoon()">Soon</button>
+<body onload="getMovies()">
     <section class="now">
       <div class="container">
+        <button onclick="showNow()">Now</button>
+        <button onclick="showSoon()">Soon</button>
         <div class="marquee-wrapper">
           <div class="marquee">
             <div class="marquee-group" id="slidingcontent">
-              <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Alien.jpg"
-                  alt="now Alien"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-                <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Back-to-the-Future.jpg"
-                  alt="now Back to the Future"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Die-Hard.jpg"
-                  alt="now Die Hard"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                src="images/playing/ET-The-Extra-Terrestrial.jpg"
-                alt="now E.T. The Extra-Terrestrial"
-                class="marquee-tag-icon"
-                width="250"
-                height="400"
-              />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Forrest-Gump.jpg"
-                  alt="now Forrest Gump"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-                <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Inception.jpg"
-                  alt="now Inception"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Jaws.jpg"
-                  alt="now Jaws"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
             </div>
             <div class="marquee-group" id="slidingcontent2" aria-hidden="true">
-              <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Alien.jpg"
-                  alt="now Alien"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-                <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Back-to-the-Future.jpg"
-                  alt="now Back to the Future"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Die-Hard.jpg"
-                  alt="now Die Hard"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                src="images/playing/ET-The-Extra-Terrestrial.jpg"
-                alt="now E.T. The Extra-Terrestrial"
-                class="marquee-tag-icon"
-                width="250"
-                height="400"
-              />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Forrest-Gump.jpg"
-                  alt="now Forrest Gump"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Inception.jpg"
-                  alt="now Inception"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
-              <div class="marquee-tag-container">
-                <img
-                  src="images/playing/Jaws.jpg"
-                  alt="now Jaws"
-                  class="marquee-tag-icon"
-                  width="250"
-                  height="400"
-                />
-              </div>
             </div>
           </div>
         </div>      
