--- a/public/html/selectedMovie.html
+++ b/public/html/selectedMovie.html
@@ -12,6 +12,6 @@
     <article id="main">
 
     </article>
-    <script src="/script/movies.js"></script>
+    <script src="../script/movies.js"></script>
 </body>
 </html>
