--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
           <div class="marquee">
             <div class="marquee-group" id="slidingcontent">
             </div>
-            <div class="marquee-group" id="slidingcontent2" aria-hidden="true">
+            <div aria-hidden="true" class="marquee-group" id="slidingcontent2">
             </div>
           </div>
         </div>      
       </div>
     </section>
+    <script type="text/javascript" src="script/index.js"></script>
 </body>
-<script src="/script/index.js"></script>
 </html>
