--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Login</h1>
-	<form action="" method="post">
+	<form action="/login" method="post">
 		<label for="email">E-mail:</label>
 		<input type="text" id="email" name="email" required><br><br>
 		
@@ -17,4 +17,5 @@
 		<input type="submit" value="Login">
 	</form>
 </body>
+<script src="/public/script/main.js"></script>
 </html>
