--- a/public/html/register.html
+++ b/public/html/register.html
@@ -62,5 +62,5 @@
       <!-- <button id="btnsubmit" type="submit" class="btn btn-primary" [disabled]="(!keyup() || !loginForm.form.valid)">Create new account</button> -->
     </form>
   </body>
-  <script src="script/login.js"></script>
+  <script src="script/register.js"></script>
 </html>
