--- a/public/html/register.html
+++ b/public/html/register.html
@@ -9,7 +9,7 @@
         <label id="email" for="e-mail">Enter e-mail</label>
         <input
           type="email"
-          id="e-mail"
+          id="emailInput"
           class="form-control"
           name="e-mail"
           placeholder="e-mail"
