--- a/public/html/register.html
+++ b/public/html/register.html
@@ -52,7 +52,7 @@
         <label id="creditCard" for="creditCard">Enter creditcard number</label>
         <input
           type="creditCard"
-          id="creditCardInput"
+          id="creditcardInput"
           class="form-control"
           name="creditCard"
           placeholder="Creditcard number"
