--- a/public/html/login.html
+++ b/public/html/login.html
@@ -4,8 +4,22 @@
     <title>Login Page</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/nav.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+            <div class="left">
+              <li><a class="active" href="/">HOME</a></li>
+              <li><a href="/cart">CART</a></li>
+            </div>
+            <div id="loginRegister" class="right">
+            </div>
+        </ul>
+      </nav>
+    </header>
     <h1>Login</h1>
     <form id="loginForm">
       <label for="email">E-mail:</label>
@@ -21,6 +35,7 @@
 
       <input type="submit" value="Login" />
     </form>
+    <script type="text/javascript" src="script/nav.js"></script>
   </body>
   <script src="script/login.js"></script>
-</html>
+  </html>
