--- a/public/html/selectedMovie.html
+++ b/public/html/selectedMovie.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../style/movie.css" />
         <link rel="stylesheet" href="../style/style.css" />
         <link rel="stylesheet" href="../style/nav.css" />
-        <title>Document</title>
+        <title>Movies</title>
     </head>
     <body>
         <header>
