--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="style/nav.css">
-    <title>Document</title>
+    <title>pate de campagne</title>
 </head>
 <body onload="getMovies()">
   <header>
