--- a/public/html/register.html
+++ b/public/html/register.html
@@ -3,6 +3,7 @@
   <head> 
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/nav.css">
+    <title>Register</title>
   </head>
   <body>
     <header>
