--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <section>
+        <div class="column11">
           <div>
             <h2>Profile</h2>
             <h4>Profile Details</h4>
@@ -20,6 +21,7 @@
             <h3>Your Order History</h3>
             <div id="orderHistory"></div>
           </div>
+        </div>
       </section>
     <script src="script/profile.js"></script>
   </body>
