--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Profile</title>
   </head>
-  <body>
+  <body onload="renderPaymentDetails()">
     <section>
         <div class="column11">
           <div>
