--- a/public/html/register.html
+++ b/public/html/register.html
@@ -18,7 +18,7 @@
         </ul>
       </nav>
     </header>
-    <form method="POST" action="/user-register">
+    <form method="POST" id="registerForm" action="/user-register">
       <h1>Create new account</h1>
 
       <div class="form-group">
@@ -30,7 +30,8 @@
           name="e-mail"
           placeholder="e-mail"
           pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
-        />
+          required
+          />
       </div>
 
       <div class="form-group">
@@ -42,6 +43,7 @@
           name="password"
           placeholder="password"
           (keyup)="keyuppassword($event)"
+          required
         />
       </div>
       <div class="form-group">
@@ -52,6 +54,7 @@
           class="form-control"
           name="fullname"
           placeholder="Full name"
+          required
         />
       </div>
       <div class="form-group">
@@ -62,6 +65,7 @@
           class="form-control"
           name="address"
           placeholder="Address"
+          required
         />
       </div>
       <div class="form-group">
@@ -72,6 +76,7 @@
           class="form-control"
           name="creditCard"
           placeholder="Creditcard number"
+          required
         />
       </div>
       <input type="submit" value="Submit" />
