--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
             <div class="left">
-              <li><a class="active" href="/">HOME</a></li>
+              <li><a href="/">HOME</a></li>
               <li><a href="/cart">CART</a></li>
             </div>
             <div id="loginRegister" class="right">
