add date select

--- a/public/html/cart.html
+++ b/public/html/cart.html
@@ -33,6 +33,7 @@
 
         <div>
           <h3>Your Items</h3>
+          <p>All movies play at 20:00</p>
           <div id="movieList"></div>
         </div>
       </div>
