--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -34,7 +34,9 @@
             <h3>Your Order History</h3>
             <div id="orderHistory"></div>
           </div>
+          <div id="orderHistoryInfo"></div>
         </div>
+        
       </section>
     <script src="script/profile.js"></script>
     <script src="script/nav.js"></script>
