--- a/public/html/login.html
+++ b/public/html/login.html
@@ -19,6 +19,15 @@
             </div>
         </ul>
       </nav>
+      <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+        <ul id="mobile" class="mobile-menu">
+          <li><a href="./">HOME</a></li>
+          <li><a href="./cart">CART</a></li>
+        </ul>
+      </div>
     </header>
     <h1>Login</h1>
     <form id="loginForm">
