--- a/public/html/register.html
+++ b/public/html/register.html
@@ -17,6 +17,15 @@
             </div>
         </ul>
       </nav>
+      <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+        <ul id="mobile" class="mobile-menu">
+          <li><a href="./">HOME</a></li>
+          <li><a href="./cart">CART</a></li>
+        </ul>
+      </div>
     </header>
     <form method="POST" id="registerForm" action="/user-register">
       <h1>Create new account</h1>
