--- a/public/html/selectedMovie.html
+++ b/public/html/selectedMovie.html
@@ -20,6 +20,15 @@
                     <div id="loginRegister" class="right"></div>
                 </ul>
             </nav>
+            <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+                <ul id="mobile" class="mobile-menu">
+                  <li><a href="./">HOME</a></li>
+                  <li><a href="./cart">CART</a></li>
+                </ul>
+              </div>
         </header>
         <article id="main"></article>
         <script src="../script/movies.js"></script>
