--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,15 @@
           </div>
       </ul>
     </nav>
+    <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+      <ul id="mobile" class="mobile-menu">
+        <li><a href="./">HOME</a></li>
+        <li><a href="./cart">CART</a></li>
+      </ul>
+    </div>
   </header>
   <section class="title">
     <h1>Paté de Campagne</h1>
